# skybox-display

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: build-deb-arm64.yml
debian/: control  postinst  skybox-display.install  skybox-display.service
scripts/: build_deb.sh  version.py
skybox_display/: __init__.py  __main__.py  app.py  collector.py  concurrency.py  config.py  display.py  imu.py  keyboard.py  main.py  math_utils.py
skybox_display/ui/: __init__.py  font.py  theme.py  ui.py  utils.py
skybox_display/ui/page/: aircraft.py  page.py  radar.py  receiver.py  settings.py  system.py
